# ai-agent-whatsapp

./: .gitignore  AGENTS.md  README.md  langgraph.json  main.py  pyproject.toml  tasks.db
planning/change-deepagent/: change-deep-agent.md  task.md
planning/mvp/: task.md
src/agent/: __init__.py  graph.py  graph_deepagent.py  router.py  state.py  tools.py
src/db/: database.py  models.py
tests/: conftest.py  test_agent_graph.py  test_agent_state.py  test_db.py  test_integration.py  test_langsmith_trace.py  test_ollama_connect.py  test_router.py  test_tools.py  test_webhook.py  test_webhook_async.py
